@@ -1,0 +1,4 @@
+﻿
+for (k=1; k<=10; k++)
+	PrintLine(k);
+
